# bizlens

./: .gitignore  00_START_HERE_V3_RELEASE.md  ACTION_PLAN_FOR_YOU.md  AUDIT_CURRENT_MODIFICATIONS.md  BIZLENS_V2.2.16_PRODUCTION_REVIEW_AND_V3_STRATEGY.md  CHANGELOG.md  COLAB_NOTEBOOKS.md  COLAB_NOTEBOOKS_DELIVERY.md  COLAB_QUICK_REFERENCE.md  COMPETITIVE_ANALYSIS.md  COMPLETE_DOCUMENTATION_INDEX.txt  COMPLETE_UNLOCK_AND_RELEASE_GUIDE.md  CRITICAL_PROJECT_REVIEW_v2.md  DASHBOARDS_QUICK_SUMMARY.txt  DASHBOARDS_SENSITIVITY_STRATEGY.md  DATASET_GENERATION_GUIDE.md  DELIVERY_SUMMARY.md  DEMO_NOTEBOOK.ipynb  DEMO_NOTEBOOK_ENHANCED.ipynb  DEMO_NOTEBOOK_FINAL.ipynb  EDUCATIONAL_STRATEGY.md  EDUCATION_LAUNCH_SUMMARY.md  ENHANCED_FEATURES_GUIDE.md  ENHANCED_SUMMARY.md  ENHANCEMENT_ROADMAP.md  EXECUTION_PLAN.md  FEATURES_FINAL.md  FILES_FOR_UPLOAD.txt  FINAL_CHECK_v2.3.0.md  FINAL_TESTING_REPORT.md  FINAL_VALIDATION_CHECKLIST.md  GITHUB_AND_PYPI_UPLOAD.md  GITHUB_COLAB_GUIDE.md  GITHUB_DEPLOYMENT_COMMANDS.sh  GITHUB_PUSH_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_UPLOAD_STEP_BY_STEP.md  IMMEDIATE_ACTION_ITEMS.txt  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  (+60 more)
examples/: 01_descriptive_analytics.py  02_diagnostic_analytics.py  02_process_mining_basics.py  03_inference_hypothesis_testing.py  03_predictive_analytics.py  04_quality_six_sigma.py  05_project_management.py  06_text_analytics.py  07_monte_carlo_simulation.py  08_prescriptive_analytics.py  09_optimization_linear_programming.py  10_datasets_and_deployment.py  11_statistical_tests.py  12_forecasting.py
notebooks/: 01_Quick_Start_Colab.ipynb  02_Descriptive_Analytics_Colab.ipynb  03_Process_Mining_Colab.ipynb  04_Statistical_Inference_Colab.ipynb  New2_Process_Mining.ipynb  New_ChiSquareTest.ipynb  New_Conjoint_Analysis.ipynb  New_Decision_Trees_Random_Forests.ipynb  New_Descriptive_Analytics.ipynb  New_Linear_Multiple_Linear_Regression.ipynb  New_Logistic_Regression.ipynb  New_Logistics_Regression.ipynb  New_PCA_Clustering.ipynb  New_Probability_Distribution_Simulation.ipynb  New_Process_Mining.ipynb  New_Q_Learning.ipynb  New_Quick_Start_bizlens.ipynb  New_Statistica_Inference.ipynb  New_Statistical_Inference.ipynb  Process_Mining_Foundations.ipynb
notebooks_v2215/: New2_Process_Mining.ipynb  New_ChiSquareTest.ipynb  New_Conjoint_Analysis.ipynb  New_Decision_Trees_Random_Forests.ipynb  New_Descriptive_Analytics.ipynb  New_Linear_Multiple_Linear_Regression.ipynb  New_Logistics_Regression.ipynb  New_PCA_Clustering.ipynb  New_Probability_Distribution_Simulation.ipynb  New_Process_Mining.ipynb  New_Q_Learning.ipynb  New_Quick_Start_bizlens.ipynb  New_Statistica_Inference.ipynb
src/bizlens/: __init__.py  core.py  core_v0_6_0.py  core_v0_6_0_enhanced.py  datasets.py  deploy.py  diagnostic.py  eda.py  inference.py  preprocess.py  process_mining.py  quality.py  scratch.py  tables.py  utils.py
tests/: __init__.py  test_core.py  test_integration.py
