[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizlens"
version = "2.2.13"
description = "Educational descriptive analytics + statistical inference + process mining. Rich tables, diagnostic checks, hypothesis testing, and business process analysis for teaching and analysis."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sudhanshu Singh", email = "cc9n8y8tqc@privaterelay.appleid.com"}
]
keywords = [
    "analytics", "statistics", "education", "business-intelligence",
    "descriptive-analytics", "eda", "data-visualization", "outlier-detection",
    "normality-test", "synthetic-data", "process-mining", "teaching",
    "sample-vs-population", "skewness", "data-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core data manipulation
    "numpy>=1.21.0",
    "pandas>=1.5.0",

    # Statistical analysis
    "scipy>=1.9.0",
    "statsmodels>=0.13.0",

    # Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",

    # Machine learning (outlier detection)
    "scikit-learn>=1.0.0",

    # UI
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Jupyter/Colab support for interactive use
jupyter = [
    "jupyter>=1.0.0",
    "ipython>=7.30.0",
    "ipykernel>=6.0.0",
]

# Additional statistical tools
stats-advanced = [
    "phik>=0.11.0",
]

# Advanced process mining (PM4Py integration)
process-mining = ["pm4py>=2.7.0"]

# Full installation with all extras
full = [
    "jupyter>=1.0.0",
    "ipython>=7.30.0",
    "ipykernel>=6.0.0",
    "phik>=0.11.0",
    "pm4py>=2.7.0",
]

# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/solutiongate-learn/bizlens"
Documentation = "https://github.com/solutiongate-learn/bizlens#readme"
Repository = "https://github.com/solutiongate-learn/bizlens"
"Bug Tracker" = "https://github.com/solutiongate-learn/bizlens/issues"
PyPI = "https://pypi.org/project/bizlens/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
