[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizlens"
version = "2.3.3"
description = "Integrated Analytics Platform - Descriptive, Diagnostic & Predictive Analytics with Sample vs Population Distinction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sudhanshu Singh", email = "sudhanshu@solutiongate.in"}
]
maintainers = [
    {name = "Sudhanshu Singh", email = "sudhanshu@solutiongate.in"}
]
keywords = [
    "business analytics", "statistics", "process mining", "machine learning",
    "data analysis", "descriptive analytics", "predictive analytics", "rich tables"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "polars>=0.20.0",
    "networkx>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/solutiongate-learn/bizlens"
Documentation = "https://github.com/solutiongate-learn/bizlens#readme"
Repository = "https://github.com/solutiongate-learn/bizlens"
Issues = "https://github.com/solutiongate-learn/bizlens/issues"
Changelog = "https://github.com/solutiongate-learn/bizlens/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bizlens = ["*.csv", "*.json"]
